// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePassword component should match snapshot if resetSuccessful is false 1`] = `
<AuthArea>
  <Connect(C) />
  <div
    style={
      Object {
        "marginTop": "10px",
        "textAlign": "center",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": "10px",
        }
      }
    >
      Link expired? 
      <Link
        replace={false}
        to="/reset_password"
      >
        Resend link 
      </Link>
    </div>
    <div>
      Need an account? 
      <Link
        replace={false}
        to="/signup"
      >
        Sign up
      </Link>
    </div>
  </div>
</AuthArea>
`;

exports[`ChangePassword component should match snapshot if resetSuccessful is true 1`] = `
<AuthArea>
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    Password reset successful!
    <div
      style={
        Object {
          "marginTop": "10px",
        }
      }
    >
      <img
        alt="reset-success"
        src="test-file-stub"
        width="80"
      />
    </div>
    <p>
      <Link
        replace={false}
        to="/login"
      >
        Login
      </Link>
       to access your account
    </p>
  </div>
</AuthArea>
`;
